Improves error handling in weather program.